# Simple-plotting-task

./: CMakeLists.txt  Makefile  README.md  curswork.py  matplotlibcpp.h  task.cpp  triangles.json  triangles_inside.json
